Fix hiding border on active link on mobiles

--- a/src/styles/media-queries/_contact.scss
+++ b/src/styles/media-queries/_contact.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 870px) {
-    .router-link-exact-active { border: none !important}
+    .router-link-exact-active { box-shadow: none !important}
     .contact-wrapper { grid-template: 0.2fr 0.5fr 3fr / 1fr }
     .social-details { padding: 15px 0 10px 0}
     .icon-link { font-size: 35px }
